Fixing shadowbox alignment issue

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -51,6 +51,7 @@
 	color: rgba(0,0,0,0);
 	position: absolute;
 	top: 0;
+	left: 0;
 	height: 300px;
 	width: 300px;
 	border-radius: 20px;
